force-app/main/default/objects/Swarm_Message__c/Swarm_Message__c.object-meta.xml
<CustomObject>
    <description>Stored transcript of a Case swarm Teams chat (Salesforce &lt;-&gt; Teams bridge).</description>
    <label>Swarm Message</label>
    <nameField>
        <displayFormat>SM-{00000000}</displayFormat>
        <label>Swarm Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Swarm Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>