force-app/main/default/objects/Swarm_Message__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case this swarm message belongs to.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Swarm Messages</relationshipLabel>
    <relationshipName>Swarm_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>