force-app/main/default/objects/Swarm_Message__c/fields/Chat_Id__c.field-meta.xml
<CustomField>
    <fullName>Chat_Id__c</fullName>
    <description>Teams chat id (Case.Swarm_Team_Id__c for Chat swarms).</description>
    <label>Chat Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>