force-app/main/default/objects/Swarm_Message__c/fields/Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MessagingSession this swarm message belongs to, for Case-less Messaging chat transcripts (mutually exclusive with Case__c).</description>
    <label>Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Swarm Messages</relationshipLabel>
    <relationshipName>Swarm_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>