force-app/main/default/objects/Swarm_Message__c/fields/Posted_By_User__c.field-meta.xml
<CustomField>
    <fullName>Posted_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce user who sent this message from the Case chat panel (Outbound).</description>
    <label>Posted By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Swarm_Messages_Posted</relationshipName>
    <type>Lookup</type>
</CustomField>