force-app/main/default/objects/Swarm_Message__c/fields/Sender_Aad_Email__c.field-meta.xml
<CustomField>
    <fullName>Sender_Aad_Email__c</fullName>
    <label>Sender AAD Email</label>
    <type>Email</type>
</CustomField>