force-app/main/default/objects/Swarm_Message__c/fields/Sender_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Display_Name__c</fullName>
    <label>Sender Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>