force-app/main/default/objects/Swarm_Message__c/fields/Teams_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Teams_Message_Id__c</fullName>
    <description>Microsoft Graph chat message id used for upsert/sync.</description>
    <externalId>true</externalId>
    <label>Teams Message Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>